<resources>
    <string name="app_name">TeachNize</string>
    <string name="ip">https://fzac2311.000webhostapp.com</string>
    <string name="app_sec1">Perfil</string>
    <string name="app_sec2">Notificaciones</string>
    <string name="app_sec3">Agenda</string>
    <string name="app_sec4">Cursos</string>
    <string name="app_sec5">Directorio</string>
    <string name="app_sec6">Inasistencias</string>
    <string name="name_course1">TRIGONOMETRÍA</string>
    <string name="name_course2">GEOGRAFíA</string>
    <string name="name_course3">BIOLOGÍA</string>
    <string name="logo_math">logo_math</string>
    <string name="st_more">more</string>
    <string name="st_level">Primaria</string>
    <string name="st_aula">5A</string>
    <string name="cant_students">20</string>
    <string name="st_sesion">6</string>
    <string name="st_day">Martes</string>
    <string name="home_text">Inicio</string>
    <string name="schedule_text">Agenda</string>
    <string name="direct_text">Directorio</string>
    <string name="course_text">Cursos</string>
    <string name="falta_text">Faltas</string>
    <string name="mensaje_bienvenida">Bienvenido, Juan!</string>
    <string name="descripcion_campana">notificaciones</string>
    <string name="descripcion_usuario">perfil de usuario</string>
    <string name="tema_curso">Chapter 3: Animal Kingdom</string>
    <string name="hora">16:00</string>
    <string name="ubicación">Aula 14 - 3er piso</string>
    <string name="curso_mas">Ver más</string>
    <string name="inicio_cursos">Cursos</string>
    <string name="inicio_recomendaciones">Recomendaciones para ti</string>
    <string name="inicio_curso_mas">Ver más</string>
    <string name="inicio_curso_nombre">CursoTest</string>
    <string name="inicio_justificaciones">Justificaciones</string>
    <string name="inicio_justificaciones_mas">Ver más</string>
    <string name="inicio_justificaciones_reciente">Más recientes</string>
    <string name="justificacion_nombre">Juan Pereira Nuñes</string>
    <string name="justificacion_aula">3ro A</string>
    <string name="justificacion_especificaciones">01/01/2001</string>
    <string name="aula">Aula: </string>
    <string name="especificaciones">Fecha:</string>
    <string name="intro_texto"><b>Organizarte</b> se vuelve más fácil. Ahora al alcance de tu mano &#9995;</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="recuperar_contra">¿Olvidaste tu contraseña?</string>
    <string name="ejemplo_user">exampleuser</string>
    <string name="contrasena">Contraseña</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tutor">Tutor</string>
    <string name="correo">Correo</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="ingresa_aqui">¡Ingresa Aquí!</string>
    <string name="por_crear">Esta opción aún no está activa</string>
    <string name="completar_espacio">Por favor rellene todos los espacios</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>