<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicioFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usuario_bienvenida"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="3"
                android:text="@string/mensaje_bienvenida"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/gris_oscuro"/>

            <ImageView
                android:id="@+id/bell_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.4"
                android:contentDescription="@string/descripcion_campana"
                android:padding="5dp"
                android:src="@drawable/bell"
                tools:ignore="ImageContrastCheck" />


            <ImageView
                android:id="@+id/user_place"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="0.1"
                android:contentDescription="@string/descripcion_usuario"

                android:src="@drawable/user"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"

            android:layout_marginEnd="20dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fondo_curso2" />

                <TextView
                    android:id="@+id/nombre_curso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"

                    android:layout_marginStart="19dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/name_course2"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="48dp"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck"
                    tools:text="@string/tema_curso" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="84dp"
                    android:src="@drawable/icon_clock"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="83dp"
                    android:text="@string/hora"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="70dp"
                    android:layout_marginTop="82dp"
                    android:text="@string/ubicación"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="85dp"
                    android:src="@drawable/icon_location" />

                <ImageView
                    android:layout_width="51dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/icon_mas" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="123dp"
                    android:layout_marginEnd="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rectangulo_barra" />

                <ImageView
                    android:id="@+id/iconCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="136dp"
                    android:layout_toStartOf="@id/moreoption"
                    android:src="@drawable/icon_calendar" />

                <TextView
                    android:id="@+id/moreoption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="134dp"
                    android:layout_centerInParent="true"

                    android:text="@string/curso_mas" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="211dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/inicio_cursos"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="67dp"
                    android:text="@string/inicio_recomendaciones"
                    android:textColor="@color/gris_suave"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="35dp"
                    android:text="@string/inicio_curso_mas"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCourseId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                tools:listitem="@layout/curso_inicio_layout"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <!--Justificaciones-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="211dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/inicio_justificaciones"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="67dp"
                    android:text="@string/inicio_justificaciones_reciente"
                    android:textColor="@color/gris_suave"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="35dp"
                    android:text="@string/inicio_justificaciones_mas"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </RelativeLayout>
        </LinearLayout>

        <!--adaptador justifiacciones recylce-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerJustiId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                tools:listitem="@layout/justificacion_inicio_layout"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        </LinearLayout>
    </LinearLayout>


</ScrollView>