<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal">
    <RelativeLayout
        android:id="@+id/fondoCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:background="@drawable/fondo_curso1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iconCurso"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/logo_math"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/logo_math"/>

            <TextView
                android:id="@+id/titleCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:maxWidth="230dp"
                android:text="44444444444444444444444"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="29dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/icon_mas"
                    android:contentDescription="@string/st_more" />
            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nivel:"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:id="@+id/nivelCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_level"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N° Estudiantes:"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                />
            <TextView
                android:id="@+id/cantAlumCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cant_students"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aula:"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:id="@+id/aulCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_aula"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerdia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            tools:listitem="@layout/item_dia"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>

</LinearLayout>